accounts/TestAccount1/BasicVPCWithSSM.template
AWSTemplateFormatVersion: "2010-09-09"

Description: Modified version of https://cloudslaw.s3.us-west-2.amazonaws.com/basicvpcwithssm.template to include additional outputs

Resources:

  # VPC
  CloudSLAWVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: "true"
      EnableDnsHostnames: "true"
      Tags:
        - Key: Name
          Value: CloudSLAW

  # Internet Gateway
  CloudSLAWInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: CloudSLAW-IGW

  CloudSLAWAttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref CloudSLAWVPC
      InternetGatewayId: !Ref CloudSLAWInternetGateway

  # DHCP Options Set
  CloudSLAWDHCPOptionSet:
    Type: AWS::EC2::DHCPOptions
    Properties:
      DomainName: ec2.internal
      DomainNameServers:
        - AmazonProvidedDNS
      Tags:
        - Key: Name
          Value: CloudSLAW-DHCP

  CloudSLAWVPCDHCPOptionsAssociation:
    Type: AWS::EC2::VPCDHCPOptionsAssociation
    Properties:
      DhcpOptionsId: !Ref CloudSLAWDHCPOptionSet
      VpcId: !Ref CloudSLAWVPC

  # Subnets
  SlawPublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref CloudSLAWVPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select
        - 0
        - !GetAZs
      MapPublicIpOnLaunch: "true"
      Tags:
        - Key: Name
          Value: slaw-public-1

  SlawPublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref CloudSLAWVPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select
        - 1
        - !GetAZs
      MapPublicIpOnLaunch: "true"
      Tags:
        - Key: Name
          Value: slaw-public-2

  SlawPrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref CloudSLAWVPC
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: !Select
        - 0
        - !GetAZs
      Tags:
        - Key: Name
          Value: slaw-private-1

  SlawPrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref CloudSLAWVPC
      CidrBlock: 10.0.4.0/24
      AvailabilityZone: !Select
        - 1
        - !GetAZs
      Tags:
        - Key: Name
          Value: slaw-private-2

  # Route Tables
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref CloudSLAWVPC
      Tags:
        - Key: Name
          Value: CloudSLAW-Public-RT

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref CloudSLAWVPC
      Tags:
        - Key: Name
          Value: CloudSLAW-Private-RT

  # Routes
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: CloudSLAWAttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref CloudSLAWInternetGateway

  # Subnet Route Table Associations
  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SlawPublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SlawPublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SlawPrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SlawPrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable

  # NAT Gateway
  CloudSLAWElasticIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  CloudSLAWNATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt CloudSLAWElasticIP.AllocationId
      SubnetId: !Ref SlawPublicSubnet1
      Tags:
        - Key: Name
          Value: CloudSLAW-NAT

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref CloudSLAWNATGateway

  # Network ACLs
  PublicNetworkAcl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref CloudSLAWVPC
      Tags:
        - Key: Name
          Value: CloudSLAW-Public-NACL

  PrivateNetworkAcl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref CloudSLAWVPC
      Tags:
        - Key: Name
          Value: CloudSLAW-Private-NACL

  # Default NACL Entries
  InboundPublicNetworkAclEntry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0

  OutboundPublicNetworkAclEntry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: 0.0.0.0/0

  InboundPrivateNetworkAclEntry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PrivateNetworkAcl
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0

  OutboundPrivateNetworkAclEntry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PrivateNetworkAcl
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: 0.0.0.0/0

  # Associate Network ACLs with Subnets
  PublicSubnet1NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref SlawPublicSubnet1
      NetworkAclId: !Ref PublicNetworkAcl

  PublicSubnet2NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref SlawPublicSubnet2
      NetworkAclId: !Ref PublicNetworkAcl

  PrivateSubnet1NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref SlawPrivateSubnet1
      NetworkAclId: !Ref PrivateNetworkAcl

  PrivateSubnet2NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref SlawPrivateSubnet2
      NetworkAclId: !Ref PrivateNetworkAcl

  # Security Group
  PrivateSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Private security group with no inbound rules and outbound access to all IPs
      VpcId: !Ref CloudSLAWVPC
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: CloudSLAW-Private-SG

  # IAM Role for SSM Client
  SSMClientRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: /
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
      RoleName: SSMClient

  # Instance Profile for EC2 to use SSM Client Role
  SSMClientInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - !Ref SSMClientRole
      InstanceProfileName: SSMClient

Outputs:
  SlawPrivateSubnet1Id:
    Description: The ID of Private Subnet 1
    Value: !Ref SlawPrivateSubnet1
    Export:
      Name: !Sub ${AWS::StackName}-PrivateSubnet1Id

  PrivateSecurityGroupId:
    Description: The ID of the private Security Group
    Value: !Ref PrivateSecurityGroup
    Export:
      Name: !Sub ${AWS::StackName}-PrivateSecurityGroupId

  RoleName:
    Description: Name of the IAM Role
    Value: !Ref SSMClientRole

  InstanceProfileName:
    Description: Name of the Instance Profile
    Value: !Ref SSMClientInstanceProfile
    Export:
      Name: !Sub ${AWS::StackName}-InstanceProfile
